# CoachSync

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package.json
.github/: CONTRIBUTING.md
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  db.sqlite3.readonly-backup  django.Dockerfile  pyproject.toml  requirements.txt
backend/authentication/: serializers.py  urls.py  views.py
backend/backend/: __init__.py  mycelery.py  settings.py
backend/organization/: filters.py  models.py  serializers.py
backend/organization/migrations/: 0001_initial.py  0002_alter_batch_description.py  0003_schedule_date_alter_classs_numeric_and_more.py  0004_remove_batch_description.py  0006_alter_batch_code.py
backend/seed_data/: classes.json
backend/student/: serializers.py  views.py
backend/student/migrations/: 0001_initial.py  0002_alter_student_address_alter_student_contact_no_and_more.py  0003_remove_student_contact_no.py  0004_alter_student_blood_group.py  0005_remove_student_batch_remove_student_classs.py  0008_remove_enroll_paid_amount_transaction_remark_and_more.py
backend/templates/: registration_confirmation.html  set_password_email.html
backend/user/: models.py  serializers.py
backend/user/migrations/: 0001_initial.py  0002_user_phone_user_role_alter_user_email.py  0003_user_created_at_alter_user_phone.py  0004_alter_user_options_alter_user_role.py  0005_alter_user_phone_alter_user_role.py  0006_alter_user_role.py  0007_alter_user_groups.py  0008_alter_user_groups.py
backend/utilities/: apps.py  filters.py  tasks.py
(+376 files in other folders)
